--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,59 +4,87 @@ trigger:
       - main
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'windows-latest'
 
 variables:
-  DOCKER_IMAGE_NAME: 'php-app'
-  DOCKER_REGISTRY: 'youracr.azurecr.io'  # Change this if using Docker Hub
-  AZURE_VM_IP: 'your-vm-ip'
-  AZURE_VM_USER: 'your-vm-username'
+  ACR_NAME: 'myacrname'  # Replace with your ACR name
+  IMAGE_NAME: 'myapp'
+  VM_IP: 'YOUR_VM_IP'  # Replace with your VM public IP
+  SSH_USERNAME: 'azureuser'  # Replace with your VM username
+  SSH_KEY: '$(VM_SSH_KEY)'
 
 stages:
-- stage: Build
-  displayName: "Build and Push Docker Image"
+- stage: Provision
+  displayName: 'Provision Infrastructure with Terraform'
   jobs:
-  - job: BuildDocker
-    displayName: "Build and Push Docker Image"
+  - job: TerraformApply
+    displayName: 'Apply Terraform Configuration'
     steps:
-    - checkout: self
+    - task: TerraformInstaller@0
+      displayName: 'Install Terraform'
+      inputs:
+        terraformVersion: 'latest'
+
+    - script: |
+        terraform init
+        terraform apply -auto-approve
+      displayName: 'Run Terraform'
+      workingDirectory: 'terraform/'
+
+- stage: Configure
+  displayName: 'Configure Server with Ansible'
+  jobs:
+  - job: AnsibleSetup
+    displayName: 'Run Ansible Playbook'
+    steps:
+    - script: |
+        ansible-playbook -i hosts setup-docker.yml
+      displayName: 'Execute Ansible Playbook'
+      workingDirectory: 'ansible/'
+
+- stage: Build
+  displayName: 'Build and Push Docker Image'
+  jobs:
+  - job: BuildAndPush
+    displayName: 'Build and Push to ACR'
+    steps:
+    - task: Docker@2
+      displayName: 'Login to ACR'
+      inputs:
+        command: 'login'
+        containerRegistry: 'ACR_CONNECTION'
 
     - task: Docker@2
-      displayName: "Login to Container Registry"
+      displayName: 'Build Docker Image'
       inputs:
-        command: login
-        containerRegistry: "your-acr-service-connection"  # If using ACR
-        username: $(DOCKER_HUB_USERNAME)  # If using Docker Hub
-        password: $(DOCKER_HUB_PASSWORD)
+        command: 'build'
+        Dockerfile: 'Dockerfile'
+        tags: '$(IMAGE_NAME):latest'
 
     - task: Docker@2
-      displayName: "Build Docker Image"
+      displayName: 'Push Docker Image'
       inputs:
-        command: build
-        Dockerfile: '**/Dockerfile'
-        repository: "$(DOCKER_REGISTRY)/$(DOCKER_IMAGE_NAME)"
-        tags: latest
-
-    - task: Docker@2
-      displayName: "Push Docker Image"
-      inputs:
-        command: push
-        repository: "$(DOCKER_REGISTRY)/$(DOCKER_IMAGE_NAME)"
-        tags: latest
+        command: 'push'
+        tags: '$(IMAGE_NAME):latest'
 
 - stage: Deploy
-  displayName: "Deploy to Azure VM"
+  displayName: 'Deploy to Azure VM'
   jobs:
-  - job: DeployToVM
-    displayName: "Deploy Docker Container on Azure VM"
+  - job: DeployVM
+    displayName: 'Deploy Docker Container'
     steps:
-    - task: SSH@0
-      displayName: "Deploy to VM via SSH"
+    - task: InstallSSHKey@0
+      displayName: 'Install SSH Key'
       inputs:
-        sshEndpoint: "your-azure-vm-connection"
-        runOptions: "inline"
-        inline: |
-          docker stop php-app || true
-          docker rm php-app || true
-          docker pull $(DOCKER_REGISTRY)/$(DOCKER_IMAGE_NAME):latest
-          docker run -d -p 80:80 --name php-app $(DOCKER_REGISTRY)/$(DOCKER_IMAGE_NAME):latest
+        knownHostsEntry: ''
+        sshPublicKey: ''
+        sshKeySecureFile: 'VM_SSH_KEY'
+
+    - script: |
+        ssh -o StrictHostKeyChecking=no $(SSH_USERNAME)@$(VM_IP) "
+        docker pull $(ACR_NAME).azurecr.io/$(IMAGE_NAME):latest && 
+        docker stop $(IMAGE_NAME) || true && 
+        docker rm $(IMAGE_NAME) || true && 
+        docker run -d -p 80:80 --name $(IMAGE_NAME) $(ACR_NAME).azurecr.io/$(IMAGE_NAME):latest
+        "
+      displayName: 'Deploy Docker Container'
